fix(styles): ensure table height is correct in collapsed mode
OUI-1286

--- a/projects/oblique/src/styles/scss/core/mixins/_table.scss
+++ b/projects/oblique/src/styles/scss/core/mixins/_table.scss
@@ -14,6 +14,7 @@
 	td {
 		position: relative;
 		margin-left: $table-collapsed-header-width;
+		min-height: calc(1.42857em + 2 * #{$spacing-sm} + 1px); // line-height + padding + border
 
 		+ td {
 			border-top: 0;
